--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=face
 server.port=8080
 
 # MongoDB configuration
-spring.data.mongodb.uri=mongodb+srv://minhhungnguyen3815:k3XAb3xOHTRotTLf@cluster0.oyzj20b.mongodb.net/FaceRecognition?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://{username}:{password}@{cluster}.oyzj20b.mongodb.net/{database_name}?retryWrites=true&w=majority&appName={name_cluster}
