--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.4'
+    id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -20,7 +20,8 @@ configurations {
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
+    maven { url 'https://repo.bytedeco.org/releases' } // Repository for org.bytedeco dependencies
 }
 
 dependencies {
@@ -38,6 +39,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // For JSON processing
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'org.bytedeco:opencv:4.8.0-1.5.8' // OpenCV Java bindings
+    implementation 'org.bytedeco:opencv-platform:4.8.0-1.5.8' // Includes native binaries
 }
 
 tasks.named('test') {
